kubectl/deployments/postgresql.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgresql
  labels:
    app: postgresql
spec:
  containers:
  - name: postresql
    image: postgres:latest
    ports:
    - containerPort: 5432
