kubectl/deployments/pgweb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgweb
  template:
    metadata:
      labels:
        app: pgweb
    spec:
      containers:
      - name: pgweb
        image: sosedoff/pgweb:latest
        ports:
        - containerPort: 8081


---
apiVersion: v1
kind: Service
metadata:
  name: pgweb-service
spec:
  selector:
    app: pgweb
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: LoadBalancer
